--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -28,7 +28,8 @@
         "tmacdou4/2019-nCov",
         "joaotinti75/Coronavirus",
         "alext234/coronavirus-stats",
-        "HopkinsIDD/ncov_incubation"
+        "HopkinsIDD/ncov_incubation",
+        "BlankerL/DXY-COVID-19-Data"
       ]
     },
     {
