--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -7,7 +7,8 @@
         "ExpDev07/coronavirus-tracker",
         "nat236919/Covid2019API",
         "bizz84/coronavirus_rest_api_flutter_course",
-        "sorxrob/2019-ncov-api"
+        "sorxrob/2019-ncov-api",
+        "BlankerL/DXY-COVID-19-Crawler"
       ]
     },
     {
