--- a/data/applications.json
+++ b/data/applications.json
@@ -128,6 +128,11 @@
           "title": "opendatadpc.maps.arcgis.com",
           "url": "http://opendatadpc.maps.arcgis.com/apps/opsdashboard/index.html#/b0c68bce2cce478eaac82fe38d4138b1",
           "description": "COVID-19 ITALIA."
+        },
+        {
+          "title": "alessiodl.github.io/COVID19Dashboard",
+          "url": "https://alessiodl.github.io/COVID19Dashboard/dist/index.html",
+          "description": "CoViD-19 Dashboard Italia."
         }
       ]
     },
