--- a/data/applications.json
+++ b/data/applications.json
@@ -133,6 +133,11 @@
           "title": "alessiodl.github.io/COVID19Dashboard",
           "url": "https://alessiodl.github.io/COVID19Dashboard/dist/index.html",
           "description": "CoViD-19 Dashboard Italia."
+        },
+        {
+          "title": "coronaviruslive.it",
+          "url": "https://coronaviruslive.it",
+          "description": "Situazione Coronavirus in Italia - LIVE"
         }
       ]
     },
