--- a/data/applications.json
+++ b/data/applications.json
@@ -138,6 +138,11 @@
           "title": "coronaviruslive.it",
           "url": "https://coronaviruslive.it",
           "description": "Situazione Coronavirus in Italia - LIVE"
+        },
+        {
+          "title": "stayinghome.club",
+          "url": "https://stayinghome.club",
+          "description": "A list of all the companies WFH or events changed because of covid-19."
         }
       ]
     },
