--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -56,7 +56,8 @@
         "hysios/coronavirus",
         "sorxrob/2019-ncov-frontend",
         "onlyphantom/coronavirus",
-        "the-robot/covid19-updates"
+        "the-robot/covid19-updates",
+        "phildini/stayinghomeclub"
       ]
     },
     {
