--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -46,7 +46,8 @@
         "jakobzhao/virus",
         "antonlukin/2019-nCoV",
         "stevenliuyi/covid19",
-        "par6n/ncov-19"
+        "par6n/ncov-19",
+        "konradkalemba/korona.ws"
       ]
     },
     {
