--- a/data/applications.json
+++ b/data/applications.json
@@ -143,6 +143,11 @@
           "title": "stayinghome.club",
           "url": "https://stayinghome.club",
           "description": "A list of all the companies WFH or events changed because of covid-19."
+        },
+        {
+          "title": "korona.ws",
+          "url": "https://korona.ws",
+          "description": "Koronawirus w Polsce."
         }
       ]
     },
