--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -30,7 +30,8 @@
         "joaotinti75/Coronavirus",
         "alext234/coronavirus-stats",
         "HopkinsIDD/ncov_incubation",
-        "BlankerL/DXY-COVID-19-Data"
+        "BlankerL/DXY-COVID-19-Data",
+        "virtadpt/exocortex-agents"
       ]
     },
     {
