--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -12,7 +12,7 @@
       ]
     },
     {
-      "category": "Statistics",
+      "category": "Statistics and Data",
       "repositories": [
         "CSSEGISandData/COVID-19",
         "globalcitizen/2019-wuhan-coronavirus-dat",
