--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -8,7 +8,8 @@
         "nat236919/Covid2019API",
         "bizz84/coronavirus_rest_api_flutter_course",
         "sorxrob/2019-ncov-api",
-        "BlankerL/DXY-COVID-19-Crawler"
+        "BlankerL/DXY-COVID-19-Crawler",
+        "isjeffcom/coronvirusFigureUK"
       ]
     },
     {
