--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -60,7 +60,8 @@
         "sorxrob/2019-ncov-frontend",
         "onlyphantom/coronavirus",
         "the-robot/covid19-updates",
-        "phildini/stayinghomeclub"
+        "phildini/stayinghomeclub",
+        "arik-so/coronavirus"
       ]
     },
     {
