--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -61,7 +61,8 @@
         "onlyphantom/coronavirus",
         "the-robot/covid19-updates",
         "phildini/stayinghomeclub",
-        "arik-so/coronavirus"
+        "arik-so/coronavirus",
+        "Bost/corona_cases"
       ]
     },
     {
