--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -63,7 +63,12 @@
         "the-robot/covid19-updates",
         "phildini/stayinghomeclub",
         "arik-so/coronavirus",
-        "Bost/corona_cases"
+        "Bost/corona_cases",
+        "soroushchehresa/iran-coronavirus",
+        "MhdHejazi/CoronaTracker",
+        "JohnCoene/coronavirus",
+        "alfianlosari/CoronaVirusTrackerSwiftUI",
+        "MG-ng/Virus-Ticker-Widget"
       ]
     },
     {
