--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -71,7 +71,8 @@
         "MhdHejazi/CoronaTracker",
         "JohnCoene/coronavirus",
         "alfianlosari/CoronaVirusTrackerSwiftUI",
-        "MG-ng/Virus-Ticker-Widget"
+        "MG-ng/Virus-Ticker-Widget",
+        "heremaps/here-covid-19-tracker"
       ]
     },
     {
