--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -9,7 +9,8 @@
         "bizz84/coronavirus_rest_api_flutter_course",
         "sorxrob/2019-ncov-api",
         "BlankerL/DXY-COVID-19-Crawler",
-        "isjeffcom/coronvirusFigureUK"
+        "isjeffcom/coronvirusFigureUK",
+        "andreagrandi/covid-api"
       ]
     },
     {
