+ /COVID19Tracking/covid-tracking-api
https://github.com/COVID19Tracking/covid-tracking-api
GraphQL & REST
Scraper lives in different repo:
https://github.com/COVID19Tracking/covid-19-crawler

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -11,7 +11,8 @@
         "BlankerL/DXY-COVID-19-Crawler",
         "isjeffcom/coronvirusFigureUK",
         "andreagrandi/covid-api",
-        "rlindskog/covid19-graphql"
+        "rlindskog/covid19-graphql",
+        "COVID19Tracking/covid-tracking-api"
       ]
     },
     {
