+ amodm/api-covid19-in

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -12,7 +12,8 @@
         "isjeffcom/coronvirusFigureUK",
         "andreagrandi/covid-api",
         "rlindskog/covid19-graphql",
-        "COVID19Tracking/covid-tracking-api"
+        "COVID19Tracking/covid-tracking-api",
+        "amodm/api-covid19-in"
       ]
     },
     {
