+ API tuananh/COVID-19

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -13,7 +13,8 @@
         "andreagrandi/covid-api",
         "rlindskog/covid19-graphql",
         "COVID19Tracking/covid-tracking-api",
-        "amodm/api-covid19-in"
+        "amodm/api-covid19-in",
+        "tuananh/COVID-19"
       ]
     },
     {
