--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -49,7 +49,8 @@
       "category": "Models",
       "repositories": [
         "HopkinsIDD/ncov_incubation",
-        "coronafighter/coronaSEIR"
+        "coronafighter/coronaSEIR",
+        "pennsignals/chime"
       ]
     },
     {
