State-by-state analysis of covid growth rates
Compares to:
- Population
- Hospital beds
- ICU's
- Italian growth rate

Also computes the "Terminal R0-based growth rate" required to not overwhelm ICU beds

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -50,7 +50,8 @@
       "repositories": [
         "HopkinsIDD/ncov_incubation",
         "coronafighter/coronaSEIR",
-        "pennsignals/chime"
+        "pennsignals/chime",
+        "daveselinger/covid-19-hackathon"
       ]
     },
     {
