--- a/data/interactive-applications.json
+++ b/data/interactive-applications.json
@@ -20,6 +20,11 @@
       "title": "Worldometer",
       "url": "https://www.worldometers.info/coronavirus",
       "description": "Showcasing coronavirus stats."
+    },
+    {
+      "title": "Coronalysis",
+      "url": "https://www.coronalysis.com",
+      "description": "Dashboard based on maps and graphs, along with scientific documentation."
     }
   ]
 }
