Add map of coronavirus confirmed cases in India.

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -68,7 +68,8 @@
         "antonlukin/2019-nCoV",
         "stevenliuyi/covid19",
         "par6n/ncov-19",
-        "konradkalemba/korona.ws"
+        "konradkalemba/korona.ws",
+        "ankitchouhan1020/corona"
       ]
     },
     {
