--- a/data/interactive-applications.json
+++ b/data/interactive-applications.json
@@ -25,6 +25,11 @@
       "title": "Coronalysis",
       "url": "https://www.coronalysis.com",
       "description": "Dashboard based on maps and graphs, along with scientific documentation."
+    },
+    {
+      "title": "COVID-19 Dashboard",
+      "url": "https://www.cov19.xyz",
+      "description": "Coronavirus outbreak dashboard."
     }
   ]
 }
