--- a/data/applications.json
+++ b/data/applications.json
@@ -153,6 +153,11 @@
           "title": "covidabruzzo.it",
           "url": "https://covidabruzzo.it",
           "description": "Coronavirus in Abruzzo - I dati aggiornati"
+        },
+        {
+          "title": "Work From Home Gigs",
+          "url": "https://bit.ly/WFH143",
+          "description": "A weekly updated list of work from home jobs during the COVID-19 Pandemic"
         }
       ]
     },
