Add opencovid19-fr/dashboard to Maps
Deployed on https://veille-coronavirus.fr

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -70,7 +70,8 @@
         "stevenliuyi/covid19",
         "par6n/ncov-19",
         "konradkalemba/korona.ws",
-        "ankitchouhan1020/corona"
+        "ankitchouhan1020/corona",
+        "opencovid19-fr/dashboard"
       ]
     },
     {
