--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -94,7 +94,8 @@
         "heremaps/here-covid-19-tracker",
         "aleskandro/covid19-charts-spreading-rapidity",
         "dsfsi/covid19za",
-        "julianschiavo/Covidcheck"
+        "julianschiavo/Covidcheck",
+        "warengonzaga/covid19-tracker-cli"
       ]
     },
     {
