CLI Category + corona-cli
This PR adds [corona-cli](https://github.com/ahmadawais/corona-cli).

> 🦠 Track the Coronavirus disease (COVID-19) or the Novel Coronavirus Strain in the command line. Both worldwide for every country or for one country. Fast response time (< 100ms).

Looking forward, peace!

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -20,6 +20,12 @@
       ]
     },
     {
+      "category": "CLI",
+      "repositories": [
+        "ahmadawais/corona-cli"
+      ]
+    },
+    {
       "category": "Statistics and Datasets",
       "repositories": [
         "CSSEGISandData/COVID-19",
