--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -16,7 +16,8 @@
         "COVID19Tracking/covid-tracking-api",
         "amodm/api-covid19-in",
         "mathdroid/covid-19-api",
-        "NovelCOVID/API"
+        "NovelCOVID/API",
+        "episphere/corona"  
       ]
     },
     {
