Add yohix/corona in Applications and Bots

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -96,7 +96,8 @@
         "aleskandro/covid19-charts-spreading-rapidity",
         "dsfsi/covid19za",
         "julianschiavo/Covidcheck",
-        "warengonzaga/covid19-tracker-cli"
+        "warengonzaga/covid19-tracker-cli",
+        "yohix/corona"
       ]
     },
     {
