Add additional CLI

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -95,8 +95,7 @@
         "heremaps/here-covid-19-tracker",
         "aleskandro/covid19-charts-spreading-rapidity",
         "dsfsi/covid19za",
-        "julianschiavo/Covidcheck",
-        "warengonzaga/covid19-tracker-cli"
+        "julianschiavo/Covidcheck"
       ]
     },
     {
@@ -112,7 +111,9 @@
     {
       "category": "CLI",
       "repositories": [
-        "ahmadawais/corona-cli"
+        "ahmadawais/corona-cli",
+        "warengonzaga/covid19-tracker-cli",
+        "sagarkarira/coronavirus-tracker-cli"
       ]
     }
   ]
