--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -17,7 +17,8 @@
         "amodm/api-covid19-in",
         "mathdroid/covid-19-api",
         "NovelCOVID/API",
-        "episphere/corona"  
+        "episphere/corona",
+        "marlon360/rki-covid-api"
       ]
     },
     {
