--- a/data/applications.json
+++ b/data/applications.json
@@ -203,7 +203,13 @@
           "title": "~~Coronavirus Tracker - latest information and news~~",
           "url": "https://play.google.com/store/apps/details?id=com.R4yan.CoronavirusTracker",
           "description": "Location based statistics, news, charts, maps based dashboard."
-        }
+        },
+         {
+          "title": "COVID-19 Tracker",
+          "url": "https://github.com/madhavtripathi05/COVID_19_TRACKER",
+          "description": "A Minimal Design application made with Flutter for checking current info on Novel Corona Virus Outbreak."
+        },
+        
       ]
     },
     {
