This API provides updated real-time data on coronavirus cases from the worldometers page, provided by the most reputable organizations and statistical offices in the world.

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -19,7 +19,8 @@
         "NovelCOVID/API",
         "episphere/corona",
         "marlon360/rki-covid-api",
-        "lkd70/coronapi"
+        "lkd70/coronapi",
+        "ChrisMichaelPerezSantiago/covid19"
       ]
     },
     {
