Remove GitLab repo

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -124,8 +124,7 @@
     {
       "category": "Hardware",
       "repositories": [
-        "jcl5m1/ventilator",
-	"open-source-ventilator/OpenLung"
+        "jcl5m1/ventilator"
       ]
     }
   ]
