--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -118,7 +118,8 @@
       "repositories": [
         "ahmadawais/corona-cli",
         "warengonzaga/covid19-tracker-cli",
-        "sagarkarira/coronavirus-tracker-cli"
+        "sagarkarira/coronavirus-tracker-cli",
+        "garrylachman/covid19-cli"
       ]
     },
     {
