--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -100,7 +100,8 @@
         "aleskandro/covid19-charts-spreading-rapidity",
         "dsfsi/covid19za",
         "julianschiavo/Covidcheck",
-        "yohix/corona"
+        "yohix/corona",
+        "duarteocarmo/coronabar"
       ]
     },
     {
