Added Neherlab model

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -58,7 +58,8 @@
         "coronafighter/coronaSEIR",
         "pennsignals/chime",
         "daveselinger/covid-19-hackathon",
-        "midas-network/COVID-19"
+        "midas-network/COVID-19",
+        "neherlab/covid19_scenarios"
       ]
     },
     {
