--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -30,6 +30,7 @@
         "globalcitizen/2019-wuhan-coronavirus-dat",
         "nextstrain/ncov",
         "GuangchuangYu/nCov2019",
+        "covid19-eu-zh/covid19-eu-data",
         "RamiKrispin/coronavirus",
         "jianxu305/nCov2019_analysis",
         "jihoo-kim/Coronavirus-Dataset",
