--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -101,7 +101,8 @@
         "dsfsi/covid19za",
         "julianschiavo/Covidcheck",
         "yohix/corona",
-        "duarteocarmo/coronabar"
+        "duarteocarmo/coronabar",
+        "cakebatterandsprinkles/whereiscovid"
       ]
     },
     {
