--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -127,7 +127,8 @@
     {
       "category": "Hardware",
       "repositories": [
-        "jcl5m1/ventilator"
+        "jcl5m1/ventilator",
+        "ProtofyTeam/OxyGEN"
       ]
     }
   ]
