Add  API: COVID-19-REPORT-API

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -20,7 +20,8 @@
         "episphere/corona",
         "marlon360/rki-covid-api",
         "lkd70/coronapi",
-        "ChrisMichaelPerezSantiago/covid19"
+        "ChrisMichaelPerezSantiago/covid19",
+        "AlaeddineMessadi/COVID-19-REPORT-API"
       ]
     },
     {
