--- a/data/applications.json
+++ b/data/applications.json
@@ -5,6 +5,11 @@
       "category": "Web Apps",
       "list": [
         {
+          "title": "coronastatistics.live",
+          "url": "https://coronastatistics.live",
+          "description": "Get the latest toll numbers for the Novel Coronavirus epidemic, see affected regions, stats, casualties and more information to track, stay vigilant and travel safe."
+        },
+        {
           "title": "coronatracker.com",
           "url": "https://www.coronatracker.com",
           "description": "CORONATRACKER.com is a community-based project powered by over 460 volunteers from across the globe, ranging from data scientists, medical professionals, UI/UX designers, fullstack developers, to the general public."
