Add CoronaNotifier Whatsapp Bot (indonesia only)

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -106,7 +106,8 @@
         "julianschiavo/Covidcheck",
         "yohix/corona",
         "duarteocarmo/coronabar",
-        "cakebatterandsprinkles/whereiscovid"
+        "cakebatterandsprinkles/whereiscovid",
+        "YogaSakti/CoronaNotifier"
       ]
     },
     {
